added English page

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -37,7 +37,7 @@ h2 {
 h2.tagline {
 	color: $secondary-text-color;
 	font-size: 1.8em;
-	font-weight: 400;
+	font-weight: 800;
 }
 
 h3{
@@ -47,7 +47,7 @@ h3{
 }
 
 h4{
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-weight: 800;
 }
 
@@ -68,6 +68,10 @@ li{
 	margin-top: -20px;
 }	
 
+.lead {
+	font-size: 1.3em;
+	margin-top: 20px;
+}
 .navbar-inverse .navbar-nav>li>a {
     color: #BDBDBD;
 }
