added larger image

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ footer {
   border: none; }
 
 img.technikos {
-  margin-bottom: 25px;
-  margin-left: 20px; }
+  margin-bottom: 40px; }
 
 h1 {
   font-size: 5.25em;
